# gorp

docs/: README.md  building.md  license.txt
gamedata/misc/: title.yml
gamedata/namegen/: namegen-strings.yml
gamedata/sfxr/: fail.sfs  test.sfs
gamedata/shader/: shader.glsl  uniforms.yml
optional/: mingw-w64-x86_64.cmake
src/: CMakeLists.txt
src/core/: core.cpp  core.hpp  game.cpp  game.hpp  guru.cpp  guru.hpp
src/core/terminal/: colour-maps.cpp  colour-maps.hpp  terminal.cpp  terminal.hpp  window.cpp  window.hpp
src/misc/: namegen.cpp  namegen.hpp
src/ui/: element.cpp  element.hpp  title.cpp  title.hpp
src/util/: process.cpp  process.hpp
src/util/file/: filereader.cpp  yaml.cpp  yaml.hpp
src/world/: codex.cpp  codex.hpp
